--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cash-mv": "^0.2.0",
     "colors": "",
     "copyfiles": "^1.0.0",
+    "css-loader": "^0.25.0",
     "dotenv": "",
     "eslint": "",
     "eslint-config-airbnb": "",
@@ -44,8 +45,13 @@
     "file-loader": "",
     "mocha": "",
     "nock": "",
+    "node-sass": "^3.10.1",
     "npm-run-all": "",
     "open": "",
+    "postcss-loader": "^0.13.0",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "url-loader": "",
     "webpack": "",
     "webpack-dev-middleware": "",
@@ -54,6 +60,7 @@
   "dependencies": {
     "babel-polyfill": "",
     "body-parser": "",
+    "classnames": "^2.2.5",
     "d3": "^4.2.8",
     "express": "",
     "mongoose": "",
